[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shewhart"
version = "0.0.1"
description = "Statistical process control (SPC) for Python: control charts, process capability, and measurement systems analysis. Validated, pandas-native, automation-first."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bertan Ucar" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0"]
keywords = [
    "spc",
    "statistical-process-control",
    "control-chart",
    "quality-engineering",
    "six-sigma",
    "process-capability",
    "cpk",
    "gage-rr",
    "msa",
    "quality-control",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/bertanucar/shewhart"
Repository = "https://github.com/bertanucar/shewhart"
Issues = "https://github.com/bertanucar/shewhart/issues"

[tool.setuptools]
packages = ["shewhart"]
