[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shewhart"
version = "0.1.0.dev0"
description = "The statistical process control library for Python: control charts, capability analysis, and measurement systems analysis, validated against published reference values."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bertan Ucar" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]
keywords = [
    "spc",
    "statistical-process-control",
    "control-chart",
    "quality-engineering",
    "six-sigma",
    "process-capability",
    "cpk",
    "gage-rr",
    "msa",
    "quality-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/bertanucar/shewhart"
Repository = "https://github.com/bertanucar/shewhart"
Issues = "https://github.com/bertanucar/shewhart/issues"

[tool.setuptools.packages.find]
include = ["shewhart*"]

[tool.setuptools.package-data]
shewhart = ["py.typed"]
